<resources>
    <string name="app_name">lr5</string>
    <string name="info">Данные о компаниях</string>
    <string name="products">Продукт</string>
    <string name="corp_name">Компания</string>
    <string name="corp_products">Продукты</string>
    <string name="corp_founders">Основатели</string>
    <string name="corporations">Компания</string>
    <string name="founders">Основатель</string>
    <string name="add">Добавить компанию</string>
    <string name="corporation">Данные о компании</string>
    <string name="clear">Очистить</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    <string name="test_counter">1</string>
    <string name="test_corp_name">corpName</string>
    <string name="test_corp_founders">corpFounders</string>
    <string name="test_corp_products">corpProducts</string>
    <string name="company_add_head">Добавление компании</string>
    <string name="company_change_head">Изменение данных о компании</string>
</resources>